# radicle-cli

./: .gitignore  .gitsigners  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HomebrewFormula  README.md  deny.toml  rad.1.adoc  radicle-tools.1.adoc
.cargo/: config
.github/: 2510389c-eaac-4466-aaa6-c1564c1d89f7.tar.gz.age  build-man-page.bash  generate-homebrew-formula.bash
.github/workflows/: actions.yml  deny.yml  package.yml  release.yml
abis/: ERC-20.json  Governance.json  OrgV1.json  Superseeder.json
account/: Cargo.toml
account/src/: lib.rs  main.rs
anchor/: Cargo.toml  USAGE
anchor/src/: lib.rs  main.rs
auth/: Cargo.toml
auth/src/: args.rs  lib.rs  main.rs
authorized-keys/: Cargo.toml  USAGE.md
authorized-keys/src/: error.rs  lib.rs  rad_keys.rs  tests.rs
authorized-keys/test/keys/opengpg/: 817EEFE32E1F0AA5
checkout/: Cargo.toml  rad-checkout.1.adoc
checkout/src/: lib.rs  main.rs
ci/: Cargo.toml  extract-env  post-receive-ok
ci/src/: lib.rs
cli/: Cargo.toml  build.rs
cli/src/: git-remote-rad.rs  rad.rs
clone/: Cargo.toml
clone/src/: lib.rs
comment/: Cargo.toml
comment/src/: lib.rs
common/: Cargo.toml
common/src/: args.rs  cobs.rs  config.rs  ethereum.rs  git.rs  identity.rs  issue.rs  keys.rs  lib.rs  logger.rs  patch.rs  person.rs  profile.rs  project.rs  proposal.rs  seed.rs  signer.rs  sync.rs  test.rs  test.rs.undo
common/src/cobs/: issue.json  issue.rs  label.json  label.rs  patch.rs  shared.rs  user.json  user.rs
common/src/ethereum/: erc_20.rs  governance.rs  primitives.rs  resolver.rs  signer.rs  superseeder.rs  walletconnect.rs
common/src/sync/: push.rs
edit/: Cargo.toml
edit/src/: lib.rs
ens/: Cargo.toml
ens/src/: lib.rs  main.rs  resolver.rs
git-remote-rad/: Cargo.toml
gov/: Cargo.toml
gov/src/: governance.rs  lib.rs
help/: Cargo.toml
help/src/: lib.rs  main.rs
init/: Cargo.toml
init/src/: lib.rs  main.rs
inspect/: Cargo.toml
inspect/src/: lib.rs
issue/: Cargo.toml
issue/src/: lib.rs  tui.rs
issue/src/tui/: app.rs  components.rs  issue.rs  state.rs  store.rs  window.rs
libcli/: Cargo.toml
libcli/src/: lib.rs
ls/: Cargo.toml
ls/src/: lib.rs  main.rs
merge/: Cargo.toml
merge/src/: lib.rs
patch/: Cargo.toml
patch/src/: lib.rs
path/: Cargo.toml
path/src/: lib.rs
pkg/brew/: radicle-tools.rb
proof-generator/: Cargo.toml  USAGE
proof-generator/src/: lib.rs  main.rs
publish/: Cargo.toml
publish/src/: lib.rs  main.rs
pull/: Cargo.toml
pull/src/: lib.rs
push/: Cargo.toml
push/src/: lib.rs  main.rs
rad/: Cargo.toml
rad-auth/: Cargo.toml
rad-auth/src/: args.rs  main.rs
rad-cli/: Cargo.toml
rad-cli/src/: lib.rs
rad-init/: Cargo.toml
rad-init/src/: main.rs
rad-prototype/: README.md  cli.py  init.sh  rad.py  render.py  requirements.txt  ui.py
rad-publish/: Cargo.toml
rad-publish/src/: main.rs
rad/src/: lib.rs  main.rs
remote/: Cargo.toml
remote-helper/: Cargo.toml
remote-helper/src/: main.rs  signer.rs
remote/src/: lib.rs
review/: Cargo.toml
review/src/: lib.rs
reward/: Cargo.toml  USAGE
reward/abis/: RewardV1.json
reward/src/: lib.rs  main.rs
rm/: Cargo.toml
rm/src/: lib.rs
safe-transaction-client/: Cargo.toml  LICENSE-MIT  README.md
safe-transaction-client/src/: lib.rs
scripts/: contributor-workflow-setup.sh  create-issues.sh
self/: Cargo.toml
self/src/: lib.rs
show/: Cargo.toml
show/src/: lib.rs  main.rs
src/: cli.rs  lib.rs  logger.rs
sync/: Cargo.toml  rad-sync.1.adoc
sync/src/: lib.rs  main.rs
terminal/: Cargo.toml
terminal-tui/: Cargo.toml
terminal-tui/examples/tui-demo/: app.rs  components.rs  main.rs
terminal-tui/src/: components.rs  layout.rs  lib.rs  state.rs  theme.rs
terminal/examples/: tui.rs  tui_internal_call.rs  tui_widget.rs
terminal/src/: args.rs  display.rs  ethereum.rs  format.rs  identity.rs  io.rs  keys.rs  lib.rs  patch.rs  remote.rs  spinner.rs  sync.rs  table.rs  textbox.rs  tui.rs
terminal/src/tui/: events.rs  layout.rs  spans.rs  store.rs  strings.rs  template.rs  theme.rs  window.rs
tests/: cli.rs  integration.rs
track/: Cargo.toml
track/src/: lib.rs  main.rs  options.rs
tree/: Cargo.toml
tree/src/: lib.rs
untrack/: Cargo.toml
untrack/src/: lib.rs  main.rs
