[package]
name = "radicle-cli"
description = "Radicle command line interface"
version = "0.6.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
rust-version = "1.62"

[profile.ci]
inherits = "dev"
debug = 0
incremental = false

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[features]
default = []
ethereum = ["ethers", "futures"]

[package.metadata.deb]
assets = [
    ["target/release/rad", "usr/bin/rad", "755"],
    ["target/release/git-remote-rad", "usr/bin/git-remote-rad", "755"],
    ["rad.1.gz", "usr/share/man/man1/rad.1.gz", "644"],
    ["rad-checkout.1.gz", "usr/share/man/man1/rad-checkout.1.gz", "644"],
    ["rad-sync.1.gz", "usr/share/man/man1/rad-sync.1.gz", "644"]
]

[dependencies]
anyhow = "1.0"
lexopt = "0.2"
colored = { version = "1.9" }
log = { version = "0.4", features = ["std"] }
librad = { version = "0" }
futures-lite = { version = "1.12" }
link-identities = { version = "0" }
radicle-common = { path = "./common" }
radicle-terminal = { path = "./terminal" }
radicle-git-helpers = { version = "0" }
url = { version = "2" }

# Ethereum functionality

ethers = { version = "0.6.2", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
assay = "0.1.1"
assert_cmd = "2.0"

[workspace]
members = [
  "anchor",
  "account",
  "terminal",
  "common",
  "checkout",
  "ens",
  "auth",
  "help",
  "rad",
  "init",
  "ls",
  "rm",
  "issue",
  "patch",
  "path",
  "push",
  "pull",
  "remote",
  "sync",
  "self",
  "inspect",
  "track",
  "untrack",
  "gov",
  "edit",
  "reward",
  "comment",
  "git-remote-rad",
]

[patch.crates-io.link-crypto]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-07-12"

[patch.crates-io.link-identities]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-07-12"

[patch.crates-io.link-async]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-07-12"

[patch.crates-io.link-replication]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-07-12"

[patch.crates-io.radicle-git-helpers]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-07-12"

[patch.crates-io.librad]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-07-12"

[patch.crates-io.lnk-sync]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-07-12"

[patch.crates-io.lnk-clib]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-07-12"

[patch.crates-io.lnk-profile]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-07-12"

[patch.crates-io.radicle-git-ext]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-07-12"

[patch.crates-io.git-trailers]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-07-12"

[patch.crates-io.git-ref-format]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-07-12"

[patch.crates-io.lnk-identities]
git = "https://github.com/radicle-dev/radicle-link"
tag = "cycle/2022-07-12"

[patch.crates-io.automerge]
git = "https://github.com/automerge/automerge-rs"
rev = "291557a019acac283e54ea31a9fad81ed65736ab"

[patch.crates-io.libusb1-sys]
git = "https://github.com/a1ien/rusb.git"
rev = "050f5091c7b0fb69c0fc25edec0910abe8afadf1"
