[profile.ci]
inherits = "dev"
debug = 0
incremental = false

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"

[workspace]
members = [
#  "anchor",
#  "account",
  "terminal",
  "common",
#  "checkout",
  "cli",
#  "ens",
  "auth",
  "help",
#  "init",
#  "ls",
#  "rm",
#  "issue",
#  "patch",
#  "path",
#  "push",
#  "pull",
#  "remote",
#  "sync",
#  "self",
#  "inspect",
#  "track",
#  "untrack",
#  "gov",
#  "edit",
#  "reward",
#  "comment",
]

[patch.crates-io.automerge]
git = "https://github.com/automerge/automerge-rs"
rev = "291557a019acac283e54ea31a9fad81ed65736ab"

[patch.crates-io.libusb1-sys]
git = "https://github.com/a1ien/rusb.git"
rev = "050f5091c7b0fb69c0fc25edec0910abe8afadf1"

[patch.crates-io.radicle]
path = "../radicle-node/radicle"

[patch.crates-io.radicle-node]
path = "../radicle-node/radicle-node"

[patch.crates-io.radicle-ssh]
path = "../radicle-node/radicle-ssh"
