[package]
name = "radicle-account"
version = "0.1.0"
edition = "2018"

[dependencies]
radicle-tools = { path = "../" }
log = { version = "0.4" }
argh = { version = "0.1.5" }
ethers = { version = "0.4", features = ["ledger"] }
tokio = { version = "1.10", features = ["rt", "macros"] }
anyhow = { version = "*" }
colored = { version = "1.9" }
