[package]
name = "rad-account"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Manage radicle ethereum accounts"

[dependencies]
ethers = { version = "0.6.2", features = ["ledger"] }
anyhow = { version = "1.0" }
lexopt = "0.2"
radicle-terminal = { path = "../terminal" }
radicle-common = { path = "../common", features = ["ethereum"] }
