[package]
name = "rad-auth"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Manage radicle identities and profiles"

[dependencies]
anyhow = "1.0"
lexopt = "0.2.0"
librad = "0"
lnk-profile = "0"
radicle-terminal = { path = "../terminal" }
radicle-common = { path = "../common" }
atty = "0.2"
zeroize = "1.1"

[dev-dependencies]
assay = "0.1.0"
