[package]
name = "rad-auth"
version = "0.7.0-dev"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Manage radicle identities and profiles"

[dependencies]
anyhow = "1.0"
lexopt = "0.2.0"
librad = "0"
radicle-terminal = { path = "../terminal" }
radicle-common = { path = "../common" }
atty = "0.2"
zeroize = "1.1"
radicle = "0.2.0"
radicle-node = "0.2.0"

[dev-dependencies]
assay = "0.1.0"
