[package]
name = "radicle-authorized-keys"
version = "0.1.0"
edition = "2018"
description = "Radicle authorized key utilities for managing Radicle git repository authorized keys."

[[bin]]
name = "rad-auth-keys"
path = "bin/rad_auth_keys.rs"

[dependencies]
async-trait = "0.1.51"
git2 = "0.13.20"
hex = "0.4.3"
pgp = "^0.7.2"
structopt = "0.3.23"
thiserror = "1.0.30"
