[package]
name = "rad-checkout"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Checkout a radicle project working copy"

[dependencies]
anyhow = "1.0"
librad = "0"
lexopt = "0.2"
rad-profile = "0"
rad-terminal = { path = "../terminal" }
rad-common = { path = "../common" }
rad-init = { path = "../init" }
