[package]
name = "rad-clone"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Clone radicle projects"

[dependencies]
anyhow = "1.0"
librad = "0"
lexopt = "0.2"
radicle-terminal = { path = "../terminal" }
radicle-common = { path = "../common" }
rad-sync = { path = "../sync" }
rad-checkout = { path = "../checkout" }
rad-init = { path = "../init" }
url = "2.2.2"
