[package]
name = "rad-comment"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Comment on issues or patches"

[dependencies]
lexopt = { version = "0.2" }
anyhow = { version = "1.0" }
radicle-terminal = { path = "../terminal" }
radicle-common = { path = "../common" }
