[package]
name = "radicle-common"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-or-later"

[features]
default = []
ethereum = ["ethers", "coins-bip32", "hex", "walletconnect", "tokio"]

[dependencies]
async-trait = "0.1.53"
automerge = "0.1"
anyhow = "1.0"
base64 = "0.13"
byteorder = "1.4"
chrono = "0.4"
either = { version = "1.6" }
git-trailers = "0.1.0"
git2 = { version = "0.13", default-features = false, features = ["https"] }
lazy_static = "1.4.0"
serde_json = "1.0"
serde = "1.0"
lexopt = "0.2"
librad = { version = "0" }
lnk-clib = { version = "0" }
lnk-identities = { version = "0" }
log = { version = "0.4", features = ["std"] }
radicle-git-ext = { version = "0" }
nonempty = { version = "0.7", features = ["serialize"] }
url = { version = "2" }
sha2 = { version = "0.10.2" }
ureq = { version = "2.2", default-features = false, features = ["json", "tls"] }
thiserror = "1"
timeago = { version = "0.3.1", default-features = false }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "serde"] }
zeroize = "1.1"

[dev-dependencies]
quickcheck = "1"

# Ethereum feature dependencies

[dependencies.tokio]
version = "1"
default-features = false
features = ["macros", "rt"]
optional = true

[dependencies.ethers]
version = "0.6.2"
default-features = false
features = ["ledger"]
optional = true

[dependencies.coins-bip32]
version = "0.6.0"
optional = true

[dependencies.hex]
version = "0.4.3"
optional = true

[dependencies.walletconnect]
git = "https://github.com/xphoniex/walletconnect-rs"
branch = "v0.1.0"
features = ["qr"]
optional = true
