[package]
name = "radicle-common"
version = "0.7.0-dev"
edition = "2018"
license = "GPL-3.0-or-later"

[features]
default = []
ethereum = ["ethers", "coins-bip32", "hex", "walletconnect"]

[dependencies]
async-trait = "0.1.53"
automerge = "0.1"
anyhow = "1.0"
base64 = "0.13"
byteorder = "1.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
either = { version = "1.6" }
futures-lite = { version = "1.12" }
git-trailers = "0.1.0"
git2 = { version = "0.13", default-features = false, features = ["https", "vendored-openssl", "vendored-libgit2"] }
lazy_static = "1.4.0"
serde_json = "1.0"
serde = "1.0"
lexopt = "0.2"
librad = { version = "0" }
link-async = { version = "0" }
lnk-clib = { version = "0" }
lnk-sync = { version = "0" }
lnk-identities = { version = "0" }
log = { version = "0.4", features = ["std"] }
radicle-git-ext = { version = "0" }
nonempty = { version = "0.8", features = ["serialize"] }
url = { version = "2" }
sha2 = { version = "0.10.5" }
ureq = { version = "2.2", default-features = false, features = ["json", "tls"] }
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
timeago = { version = "0.3.1", default-features = false }
toml = { version = "0.5.9" }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "serde"] }
zeroize = "1.1"
radicle = "0.2.0"
radicle-node = "0.2.0"
radicle-ssh = "0.2.0"
secstr = "0.3"
ed25519-zebra = "3.0"
serde_cbor = "0.10"
rand = "0.8"
multibase = "0.9"
dyn-clone = "1.0"
rpassword = "4.0"
scrypt = { version = "^0.10.0", default-features = false }
generic-array = { version = "0.14", features = ["serde"] }
chacha20poly1305 = { version = "^0.10.1", default-features = false, features = ["alloc"] }

[dev-dependencies]
quickcheck = "1"

# Ethereum feature dependencies

[dependencies.ethers]
version = "0.17"
default-features = false
features = ["ledger"]
optional = true

[dependencies.coins-bip32]
version = "0.7.0"
optional = true

[dependencies.hex]
version = "0.4.3"
optional = true

[dependencies.walletconnect]
git = "https://github.com/radicle-dev/walletconnect-rs"
branch = "master"
features = ["qr"]
optional = true
