[package]
name = "rad-ens"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Manage your radicle ENS records"

[dependencies]
anyhow = "1.0"
librad = "0"
lexopt = "0.2"
ethers = { version = "0.6.2", features = ["abigen-offline"] }
thiserror = "1.0"
rad-terminal = { path = "../terminal" }
rad-common = { path = "../common", features = ["ethereum"] }
serde_json = "1"
tokio = "1"
url = { version = "2" }
