[package]
name = "git-remote-rad"
authors = ["The Radicle Team <dev@radicle.xyz>"]
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-or-later"
description = "Git remote helper for radicle"

[dependencies]
radicle-cli = { path = "../" }
async-trait = { version = "0.1" }
log = { version = "0.4" }
lexopt = { version = "0.2" }
ethers = { version = "0.6" }
link-identities = { version = "0" }
radicle-git-helpers = { version = "0" }
radicle-common = { path = "../common" }
librad = { version = "0" }
url = { version = "*" }
anyhow = { version = "1.0" }
