[package]
name = "rad-gov"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Interact with Radicle governance contracts"

[dependencies]
anyhow = "1.0"
librad = "0"
lexopt = "0.2"
radicle-terminal = { path = "../terminal", features = ["ethereum"] }
radicle-common = { path = "../common", features = ["ethereum"] }
ethers = "0.6"
thiserror = "1.0"
serde_json = "1"
regex = "1.5"
