[package]
name = "rad-help"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Radicle CLI help"

[features]
default = []
ethereum = ["rad-ens", "rad-account"]

[dependencies]
anyhow = "1.0"
librad = "0"
lexopt = "0.2"
lnk-clib = "0"
lnk-profile = "0"
radicle-terminal = { path = "../terminal" }
radicle-common = { path = "../common" }
rad-self = { path = "../self" }
rad-inspect = { path = "../inspect" }
rad-ls = { path = "../ls" }
rad-track = { path = "../track" }
rad-untrack = { path = "../untrack" }
rad-init = { path = "../init" }
rad-auth = { path = "../auth" }
rad-clone = { path = "../clone" }
rad-checkout = { path = "../checkout" }
rad-remote = { path = "../remote" }
rad-push = { path = "../push" }
rad-pull = { path = "../pull" }
rad-sync = { path = "../sync" }

# Ethereum

rad-ens = { path = "../ens", optional = true }
rad-account = { path = "../account", optional = true }
