[package]
name = "rad-init"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Initialize radicle projects from git repositories"

[dependencies]
anyhow = "1.0"
librad = "0"
lexopt = "0.2"
lnk-profile = "0"
radicle-terminal = { path = "../terminal" }
radicle-common = { path = "../common" }
