[package]
name = "rad-inspect"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Inspect a directory for information relating to radicle"

[dependencies]
anyhow = "1.0"
librad = "0"
lexopt = "0.2"
rad-profile = "0"
rad-terminal = { path = "../terminal" }
rad-common = { path = "../common" }
serde_json = "1.0"
