[package]
name = "rad-inspect"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Inspect a radicle identity or project directory"

[dependencies]
anyhow = "1.0"
librad = "0"
lexopt = "0.2"
lnk-profile = "0"
rad-terminal = { path = "../terminal" }
rad-common = { path = "../common" }
link-identities = { version = "0" }
serde_json = "1.0"
colored_json = "2.1.0"
