[package]
name = "rad-inspect"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Inspect a radicle identity or project directory"

[dependencies]
anyhow = "1.0"
librad = "0"
lexopt = "0.2"
radicle-terminal = { path = "../terminal" }
radicle-common = { path = "../common" }
serde_json = "1.0"
json-color = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
