[package]
name = "rad-issue"
version = "0.7.0-dev"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Manage radicle issues"

[dependencies]
lexopt = { version = "0.2" }
anyhow = { version = "1.0" }
librad = { version = "0" }
radicle-common = { path = "../common" }
radicle-terminal = { path = "../terminal" }
radicle-terminal-tui = { path = "../terminal-tui", optional = true }
timeago = { version = "0.3.1" }
tuirealm = { version = "1.7.0", optional = true }
tui-realm-stdlib = { version = "1.1.6", optional = true }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.8" }
serde = { version = "1.0" }

[features]
tui = ["radicle-terminal-tui", "tuirealm", "tui-realm-stdlib"]