[package]
name = "rad-ls"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "List radicle projects and other objects"

[dependencies]
anyhow = "1.0"
librad = "0"
lexopt = "0.1"
rad-terminal = { path = "../terminal" }
rad-common = { path = "../common" }
