[package]
name = "rad-merge"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Merge radicle patches"

[dependencies]
anyhow = "1.0"
librad = "0"
lexopt = "0.2"
serde_json = "1.0"
serde = "1.0"
lnk-profile = "0"
lnk-identities = "0"
radicle-terminal = { path = "../terminal" }
radicle-common = { path = "../common" }
rad-sync = { path = "../sync" }
