[package]
name = "rad-patch"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Manage patches for radicle projects"

[dependencies]
git2 = "0.13"
anyhow = "1.0"
librad = "0"
lexopt = "0.2"
serde_json = "1.0"
serde = "1.0"
lnk-profile = "0"
lnk-identities = "0"
rad-terminal = { path = "../terminal" }
rad-common = { path = "../common" }
