[package]
name = "rad-patch"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Manage patches for radicle projects"

[dependencies]
anyhow = "1.0"
librad = "0"
lexopt = "0.2"
radicle-terminal = { path = "../terminal" }
radicle-common = { path = "../common" }
