[package]
name = "rad-path"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Show radicle paths"

[dependencies]
anyhow = "1.0"
librad = "0"
lexopt = "0.2"
lnk-profile = "0"
radicle-terminal = { path = "../terminal" }
radicle-common = { path = "../common" }
