[package]
name = "rad-pull"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Pull radicle project refs into a working copy"

[dependencies]
anyhow = "1.0"
lexopt = "0.2"
radicle-terminal = { path = "../terminal" }
radicle-common = { path = "../common" }
rad-sync = { path = "../sync" }
