[package]
name = "rad-push"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Publish radicle projects to the network"

[dependencies]
anyhow = "1.0"
lexopt = { version = "0.2" }
rad-common = { path = "../common" }
rad-terminal = { path = "../terminal" }
rad-sync = { path = "../sync" }
